# eos-evm

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  deploy.sh  hello.abi  start.sh  stop.sh  test.sh
assets/: hello.wasm  hello.wast
evm-contract/: CMakeLists.txt
evm-contract/include/eos-evm/evm/: account.h  global_state.h  storage.h  types.h
evm-contract/src/: account.cpp  evm.cpp  global_state.cpp  storage.cpp
include/eos-evm/: account.h  global_state.h  storage.h  types.h
include/eos-evm/evm/: account.h  global_state.h  storage.h
libs/eEVM/: CMakeLists.txt
libs/eEVM/include/eEVM/: account.h  bigint.h  disassembler.h  rlp.h  trace.h  util.h
libs/eEVM/src/: processor.cpp  stack.cpp
src/: account.cpp  evm.cpp  global_state.cpp  hello.cpp  storage.cpp  types.cpp
src/evm/: account.cpp  global_state.cpp  storage.cpp  types.cpp
test/: package-lock.json
tests/: CMakeLists.txt  contracts.hpp.in  evm_tests.cpp
