cmake_minimum_required(VERSION 3.5)
project(eos-evm)
set(EOSIO_WASM_OLD_BEHAVIOR "Off")
# set(CMAKE_AR "/usr/local/bin/eosio-ar")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-cpp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-cpp")
find_package(eosio.cdt)
add_subdirectory(evm-contract)
add_subdirectory(libs/eEVM)
